--- a/order/index.html
+++ b/order/index.html
@@ -83,8 +83,8 @@
   <script>
     const menuItems = {
       pork: [
-        { name: "Pork Sisig", price: 199 },
-        { name: "Lechon Kawali", price: 229 },
+        { name: "Pork Sisig", price: 230 },
+        { name: "Lechon Kawali", price: 300 },
         { name: "Pork BBQ (2 sticks)", price: 120 }
       ],
       chicken: [
@@ -93,14 +93,14 @@
         { name: "Grilled Chicken", price: 199 }
       ],
       vegetable: [
-        { name: "Chopsuey", price: 159 },
-        { name: "Pinakbet", price: 149 },
-        { name: "Ginataang Gulay", price: 169 }
+        { name: "Chopsuey", price: 210 },
+        { name: "Pinakbet", price: 235 },
+        { name: "Ginataang Gulay", price: 200 }
       ],
       noodles: [
-        { name: "Pancit Canton", price: 139 },
-        { name: "Bam-i", price: 149 },
-        { name: "Sotanghon Guisado", price: 139 }
+        { name: "Pancit Canton", price: 200 },
+        { name: "Bam-i", price: 220 },
+        { name: "Sotanghon Guisado", price: 280 }
       ],
       rice: [
         { name: "Cup Rice", price: 25 },
@@ -113,9 +113,9 @@
         { name: "Beef Caldereta", price: 320 }
       ],
       fish: [
-        { name: "Fried Tilapia", price: 199 },
-        { name: "Grilled Bangus", price: 219 },
-        { name: "Sweet & Sour Fish", price: 229 }
+        { name: "Fish tinoa", price: 310 },
+        { name: "Fish kinilaw", price: 340 },
+        { name: "Sweet & Sour Fish", price: 320 }
       ]
     };
 
