--- a/order/index.html
+++ b/order/index.html
@@ -3,30 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stone Grill - Full Order Form</title>
+  <title>Stone Grill - Online Order</title>
   <meta name="description" content="Order food online from Stone Grill Restaurant.">
-  <meta property="og:title" content="Stone Grill Online Order Form">
-  <meta property="og:description" content="Place your order, choose dine-in or takeout, and schedule your pickup time.">
-  <meta property="og:image" content="https://stonegrillresto.net/order/assets/whitelogo.png">
-  <meta property="og:url" content="https://stonegrillresto.net/order/">
-  <meta name="theme-color" content="#b22222">
   <link rel="stylesheet" href="style.css">
   <style>
-    #cartItems { margin:15px 0 10px 0; border:1px solid #bbb; padding:10px; border-radius:8px;}
-    .cart-row {display:flex; align-items:center; justify-content:space-between; margin-bottom:4px;}
-    .cart-row button {margin: 0 5px;}
-    .add-btn {background:#b22222;color:#fff;border:none;padding:4px 12px;border-radius:4px;}
-    .add-btn:hover {background:#aa1818;}
-    .qty-btn {padding:2px 7px;}
+    .selectable-item {border:1px solid #ccc;padding:10px;margin-bottom:8px;border-radius:6px;cursor:pointer;transition:background 0.15s;}
+    .selectable-item.selected {background:#b22222;color:#fff;font-weight:bold;}
+    #cartItems {border:1px solid #bbb;padding:10px;border-radius:8px;margin-top:10px;}
+    .cart-row {display:flex;justify-content:space-between;align-items:center;margin-bottom:6px;}
+    .cart-row .delete-btn {padding:2px 7px;color:#fff;background:#b22222;border:none;border-radius:3px;}
     .cart-total {font-weight:bold; margin-top:8px;}
-    .selectable-item {transition: background 0.15s, color 0.15s;}
-    .selectable-item.selected {background:#b22222 !important; color:#fff !important; font-weight:bold;}
+    .hidden {display:none;}
   </style>
 </head>
 <body>
   <div class="container">
     <h1 style="text-align:center;">Stone Grill Order Form</h1>
-
     <form id="fullOrderForm">
       <label for="name">Full Name:</label>
       <input type="text" id="name" name="name" required>
@@ -75,16 +67,19 @@
     </form>
 
     <div id="orderSummary" class="hidden">
-      <h2>Order Summary</h2>
       <div id="summaryText"></div>
+      <div style="margin-top: 30px;">
+        <a href="/" style="color:#b22222;text-decoration:underline;font-weight:bold;">Back to Stone Grill Homepage</a>
+      </div>
     </div>
   </div>
 
   <script>
+    // 1. MENU DATA
     const menuItems = {
       pork: [
-        { name: "Pork Sisig", price: 230 },
-        { name: "Lechon Kawali", price: 300 },
+        { name: "Pork Sisig", price: 199 },
+        { name: "Lechon Kawali", price: 229 },
         { name: "Pork BBQ (2 sticks)", price: 120 }
       ],
       chicken: [
@@ -93,14 +88,14 @@
         { name: "Grilled Chicken", price: 199 }
       ],
       vegetable: [
-        { name: "Chopsuey", price: 210 },
-        { name: "Pinakbet", price: 235 },
-        { name: "Ginataang Gulay", price: 200 }
+        { name: "Chopsuey", price: 159 },
+        { name: "Pinakbet", price: 149 },
+        { name: "Ginataang Gulay", price: 169 }
       ],
       noodles: [
-        { name: "Pancit Canton", price: 200 },
-        { name: "Bam-i", price: 220 },
-        { name: "Sotanghon Guisado", price: 280 }
+        { name: "Pancit Canton", price: 139 },
+        { name: "Bam-i", price: 149 },
+        { name: "Sotanghon Guisado", price: 139 }
       ],
       rice: [
         { name: "Cup Rice", price: 25 },
@@ -113,12 +108,11 @@
         { name: "Beef Caldereta", price: 320 }
       ],
       fish: [
-        { name: "Fish tinoa", price: 310 },
-        { name: "Fish kinilaw", price: 340 },
-        { name: "Sweet & Sour Fish", price: 320 }
+        { name: "Fried Tilapia", price: 199 },
+        { name: "Grilled Bangus", price: 219 },
+        { name: "Sweet & Sour Fish", price: 229 }
       ]
     };
-
     let cart = [];
     let selectedItems = [];
 
@@ -126,7 +120,6 @@
       const orderType = document.getElementById("orderType").value;
       document.getElementById("personCount").style.display = (orderType === "Dine-in") ? "block" : "none";
     }
-
     function updateItems() {
       const category = document.getElementById("category").value;
       const itemDiv = document.getElementById("itemSelection");
@@ -136,36 +129,23 @@
         menuItems[category].forEach((item, index) => {
           const row = document.createElement("div");
           row.className = "selectable-item";
-          row.style.border = "1px solid #ccc";
-          row.style.padding = "10px";
-          row.style.marginBottom = "8px";
-          row.style.borderRadius = "6px";
-          row.style.cursor = "pointer";
           row.innerHTML = `<span>${item.name} (₱${item.price})</span>`;
-          row.onclick = function() {
-            toggleHighlight(row, category, index);
-          };
+          row.onclick = function() { toggleHighlight(row, category, index); };
           itemDiv.appendChild(row);
         });
       }
     }
-
     function toggleHighlight(row, category, index) {
       const key = category + '-' + index;
       const selIndex = selectedItems.indexOf(key);
-
       if (selIndex >= 0) {
-        // Unselect
         selectedItems.splice(selIndex, 1);
         row.classList.remove("selected");
       } else {
-        // Select
         selectedItems.push(key);
         row.classList.add("selected");
       }
     }
-
-    // Add to Cart button logic
     document.getElementById("addSelectedBtn").onclick = function() {
       const category = document.getElementById("category").value;
       if (menuItems[category]) {
@@ -178,46 +158,40 @@
         });
       }
       selectedItems = [];
-      // Remove all highlights
       document.querySelectorAll('.selectable-item').forEach(row => {
         row.classList.remove("selected");
       });
       renderCart();
     };
-
     function removeFromCart(idx) {
       cart.splice(idx, 1);
       renderCart();
     }
-
     function renderCart() {
       const cartDiv = document.getElementById("cartItems");
       cartDiv.innerHTML = "";
       let total = 0;
-      if (cart.length === 0) {
-        cartDiv.innerHTML = "<em>No items yet.</em>";
-      } else {
-        cart.forEach((item, idx) => {
-          total += item.qty * item.price;
-          const row = document.createElement("div");
-          row.className = "cart-row";
-          row.innerHTML = `
-            <span>${item.name} (₱${item.price})</span>
-            <button type="button" class="qty-btn" onclick="removeFromCart(${idx})">🗑️</button>
-          `;
-          cartDiv.appendChild(row);
-        });
-      }
+      if (cart.length === 0) cartDiv.innerHTML = "<em>No items yet.</em>";
+      else cart.forEach((item, idx) => {
+        total += item.qty * item.price;
+        const row = document.createElement("div");
+        row.className = "cart-row";
+        row.innerHTML = `
+          <span>${item.name} (₱${item.price})</span>
+          <button type="button" class="delete-btn" onclick="removeFromCart(${idx})">🗑️</button>
+        `;
+        cartDiv.appendChild(row);
+      });
       document.getElementById("dropdownTotal").textContent = total;
     }
 
+    // 2. SUBMIT LOGIC WITH CONFIRMATION PAGE
     document.getElementById("fullOrderForm").addEventListener("submit", function(e) {
       e.preventDefault();
       if(cart.length===0){
         alert("Please select at least one menu item.");
         return;
       }
-
       const data = {
         name: document.getElementById("name").value,
         mobile: document.getElementById("mobile").value,
@@ -229,46 +203,50 @@
         total: document.getElementById("dropdownTotal").textContent
       };
 
-      fetch("https://script.google.com/macros/s/AKfycbwc8ltNLesdsUcJDjuAGtGqPao5qOUXJSdgC6aM3cYfMRG9uHoWf3R7bvkfBqM9tt4/exec", { // Palitan ng Web App URL mo
+      // LOADING... (Optional: add spinner/message)
+      document.getElementById("orderSummary").classList.remove("hidden");
+      document.getElementById("summaryText").innerHTML = `<div style="color:#888">Sending your order... Please wait.</div>`;
+
+      fetch("https://script.google.com/macros/s/AKfycbwc8ltNLesdsUcJDjuAGtGqPao5qOUXJSdgC6aM3cYfMRG9uHoWf3R7bvkfBqM9tt4/exe", {
         method: "POST",
-        mode: "no-cors",
         headers: {"Content-Type": "application/json"},
         body: JSON.stringify(data)
-      });
-
-      // Show order summary after submit
-      let summary = "<strong>Customer Info:</strong><br>";
-      summary += "Name: " + data.name + "<br>";
-      summary += "Mobile: " + data.mobile + "<br>";
-      summary += "Order Type: " + data.orderType + "<br>";
-      if (data.orderType === "Dine-in") {
-        summary += "Persons: " + data.persons + "<br>";
-      }
-      summary += "Pickup Time: " + data.datetime + "<br><br>";
-      summary += "<strong>Ordered Items:</strong><br>";
-
-      cart.forEach(item => {
-        summary += `${item.name} (₱${item.price}) x ${item.qty}<br>`;
-      });
-
-      summary += "<br><strong>Special Requests:</strong> " + data.requests + "<br>";
-      summary += "<strong>Total:</strong> ₱" + data.total;
-
-      document.getElementById("summaryText").innerHTML = summary;
-      document.getElementById("orderSummary").classList.remove("hidden");
-
-      // Reset form and cart after
-      document.getElementById("fullOrderForm").reset();
-      cart = [];
-      renderCart();
-      // Remove all highlights (reset style)
-      document.querySelectorAll('.selectable-item').forEach(row => {
-        row.classList.remove("selected");
+      })
+      .then(response => response.text())
+      .then(text => {
+        if (text.trim() === "OK") {
+          document.getElementById("fullOrderForm").style.display = "none";
+          let summary = "<h2>Thank you for your order!</h2>";
+          summary += "<strong>Order Details:</strong><br><ul>";
+          cart.forEach(item => {
+            summary += `<li>${item.name} (₱${item.price}) x ${item.qty}</li>`;
+          });
+          summary += "</ul>";
+          summary += `<strong>Total Amount:</strong> ₱${data.total}<br><br>`;
+          summary += `<div style="font-size:1.1em;color:#b22222;margin-top:12px;">
+            Your order has been submitted and our staff will process it after payment has been made.<br>
+            Please feel free to explore our site while waiting.
+          </div>`;
+          document.getElementById("summaryText").innerHTML = summary;
+          cart = [];
+          renderCart();
+          document.querySelectorAll('.selectable-item').forEach(row => {
+            row.classList.remove("selected");
+          });
+        } else {
+          document.getElementById("summaryText").innerHTML = `<h2 style="color:#b22222">Your order has not been sent.</h2>
+          <div>Sorry, there was a problem sending your order. Please try again, or contact our staff for assistance.</div>`;
+        }
+      })
+      .catch(err => {
+        document.getElementById("summaryText").innerHTML = `<h2 style="color:#b22222">Your order has not been sent.</h2>
+        <div>Sorry, there was a problem sending your order. Please try again, or contact our staff for assistance.</div>`;
       });
     });
 
-    // Initialize
+    // Init cart UI
     renderCart();
+    window.removeFromCart = removeFromCart;
   </script>
 </body>
 </html>
