--- a/order/index.html
+++ b/order/index.html
@@ -53,6 +53,14 @@
         <option value="fish">FISH</option>
       </select>
 
+      <div style="margin-top: 20px;">
+  <button type="button" onclick="addVisibleCategoryToOrder()">Add to Order</button>
+</div>
+
+<h3>Your Ordered Items:</h3>
+<ul id="orderedItemsList" style="border:1px solid #ccc; padding:10px; min-height:50px;"></ul>
+
+      
       <div id="itemSelection" style="margin-top: 20px;"></div>
       <button type="button" id="addSelectedBtn" style="margin-bottom:10px;">Add Selected</button>
 
