--- a/order/index.html
+++ b/order/index.html
@@ -53,20 +53,12 @@
         <option value="fish">FISH</option>
       </select>
 
-      <div style="margin-top: 20px;">
+    <div style="margin-top: 20px;">
   <button type="button" onclick="addVisibleCategoryToOrder()">Add to Order</button>
 </div>
 
 <h3>Your Ordered Items:</h3>
 <ul id="orderedItemsList" style="border:1px solid #ccc; padding:10px; min-height:50px;"></ul>
-
-      
-      <div id="itemSelection" style="margin-top: 20px;"></div>
-      <button type="button" id="addSelectedBtn" style="margin-bottom:10px;">Add Selected</button>
-
-      <h3>Ordered Items:</h3>
-      <div id="cartItems"></div>
-      <div class="cart-total">Total: ₱<span id="dropdownTotal">0</span></div>
 
       <label for="requests">Special Requests:</label>
       <textarea id="requests" name="requests" rows="3" style="width:100%;"></textarea>
@@ -256,5 +248,30 @@
     renderCart();
     window.removeFromCart = removeFromCart;
   </script>
+  <script>
+  function addVisibleCategoryToOrder() {
+    const visibleSection = document.querySelector('.menu-section:not([style*="display: none"])');
+    const items = visibleSection.querySelectorAll('.menu-item');
+
+    items.forEach(item => {
+      const label = item.querySelector('label').innerText;
+      const input = item.querySelector('input[type="number"]');
+      const qty = parseInt(input.value);
+      const priceText = item.querySelector('.price').innerText.replace('₱', '');
+      const price = parseFloat(priceText);
+
+      if (qty && qty > 0) {
+        const orderedList = document.getElementById("orderedItemsList");
+        const li = document.createElement("li");
+        li.textContent = `${label} x${qty} — ₱${qty * price}`;
+        orderedList.appendChild(li);
+
+        // Optional: Reset quantity
+        input.value = '';
+      }
+    });
+  }
+</script>
+
 </body>
 </html>
