--- a/order/index.html
+++ b/order/index.html
@@ -52,11 +52,13 @@
         <option value="beef">BEEF</option>
         <option value="fish">FISH</option>
       </select>
+      
+      <div id="itemSelection" style="margin-top: 20px;"></div>
+      <button type="button" id="addSelectedBtn" style="margin-bottom:10px;">Add Selected</button>
 
-    <div style="margin-top: 20px;">
-  <button type="button" onclick="addVisibleCategoryToOrder()">Add to Order</button>
-</div>
-
+      <h3>Ordered Items:</h3>
+      <div id="cartItems"></div>
+      <div class="cart-total">Total: ₱<span id="dropdownTotal">0</span></div>
 <h3>Your Ordered Items:</h3>
 <ul id="orderedItemsList" style="border:1px solid #ccc; padding:10px; min-height:50px;"></ul>
 
