--- a/order/index.html
+++ b/order/index.html
@@ -10,7 +10,7 @@
     .selectable-item {border:1px solid #ccc;padding:10px;margin-bottom:8px;border-radius:6px;cursor:pointer;transition:background 0.15s;}
     .selectable-item.selected {background:#b22222;color:#fff;font-weight:bold;}
     #cartItems {border:1px solid #bbb;padding:10px;border-radius:8px;margin-top:10px;}
-    .cart-row {display:flex;justify-content:space-between;align-items:center;margin-bottom:6px;}
+    .cart-row {display:flex;justify-content:space-between;align-items:center;margin-bottom:6px;gap: 8px;}
     .cart-row .delete-btn {padding:2px 7px;color:#fff;background:#b22222;border:none;border-radius:3px;}
     .cart-total {font-weight:bold; margin-top:8px;}
     .hidden {display:none;}
@@ -52,7 +52,7 @@
         <option value="beef">BEEF</option>
         <option value="fish">FISH</option>
       </select>
-
+      
       <div id="itemSelection" style="margin-top: 20px;"></div>
       <button type="button" id="addSelectedBtn" style="margin-bottom:10px;">Add Selected</button>
 
@@ -75,51 +75,23 @@
   </div>
 
   <script>
-    // 1. MENU DATA
     const menuItems = {
-      pork: [
-        { name: "Pork Sisig", price: 199 },
-        { name: "Lechon Kawali", price: 229 },
-        { name: "Pork BBQ (2 sticks)", price: 120 }
-      ],
-      chicken: [
-        { name: "Fried Chicken", price: 179 },
-        { name: "Buffalo Wings", price: 189 },
-        { name: "Grilled Chicken", price: 199 }
-      ],
-      vegetable: [
-        { name: "Chopsuey", price: 159 },
-        { name: "Pinakbet", price: 149 },
-        { name: "Ginataang Gulay", price: 169 }
-      ],
-      noodles: [
-        { name: "Pancit Canton", price: 139 },
-        { name: "Bam-i", price: 149 },
-        { name: "Sotanghon Guisado", price: 139 }
-      ],
-      rice: [
-        { name: "Cup Rice", price: 25 },
-        { name: "Platter Rice", price: 100 },
-        { name: "Stone Grill Fried Rice", price: 200 }
-      ],
-      beef: [
-        { name: "Beef Steak", price: 300 },
-        { name: "Beef with Mushroom", price: 310 },
-        { name: "Beef Caldereta", price: 320 }
-      ],
-      fish: [
-        { name: "Fried Tilapia", price: 199 },
-        { name: "Grilled Bangus", price: 219 },
-        { name: "Sweet & Sour Fish", price: 229 }
-      ]
+      pork: [ { name: "Pork Sisig", price: 199 }, { name: "Lechon Kawali", price: 229 }, { name: "Pork BBQ (2 sticks)", price: 120 } ],
+      chicken: [ { name: "Fried Chicken", price: 179 }, { name: "Buffalo Wings", price: 189 }, { name: "Grilled Chicken", price: 199 } ],
+      vegetable: [ { name: "Chopsuey", price: 159 }, { name: "Pinakbet", price: 149 }, { name: "Ginataang Gulay", price: 169 } ],
+      noodles: [ { name: "Pancit Canton", price: 139 }, { name: "Bam-i", price: 149 }, { name: "Sotanghon Guisado", price: 139 } ],
+      rice: [ { name: "Cup Rice", price: 25 }, { name: "Platter Rice", price: 100 }, { name: "Stone Grill Fried Rice", price: 200 } ],
+      beef: [ { name: "Beef Steak", price: 300 }, { name: "Beef with Mushroom", price: 310 }, { name: "Beef Caldereta", price: 320 } ],
+      fish: [ { name: "Fried Tilapia", price: 199 }, { name: "Grilled Bangus", price: 219 }, { name: "Sweet & Sour Fish", price: 229 } ]
     };
-    let cart = [];
-    let selectedItems = [];
+
+    let cart = [], selectedItems = [];
 
     function togglePersons() {
       const orderType = document.getElementById("orderType").value;
       document.getElementById("personCount").style.display = (orderType === "Dine-in") ? "block" : "none";
     }
+
     function updateItems() {
       const category = document.getElementById("category").value;
       const itemDiv = document.getElementById("itemSelection");
@@ -135,6 +107,7 @@
         });
       }
     }
+
     function toggleHighlight(row, category, index) {
       const key = category + '-' + index;
       const selIndex = selectedItems.indexOf(key);
@@ -146,27 +119,25 @@
         row.classList.add("selected");
       }
     }
+
     document.getElementById("addSelectedBtn").onclick = function() {
-      const category = document.getElementById("category").value;
-      if (menuItems[category]) {
-        selectedItems.forEach(key => {
-          const [cat, idx] = key.split('-');
-          const item = menuItems[cat][parseInt(idx)];
-          if (!cart.some(ci => ci.name === item.name && ci.price === item.price)) {
-            cart.push({ ...item, qty: 1 });
-          }
-        });
-      }
-      selectedItems = [];
-      document.querySelectorAll('.selectable-item').forEach(row => {
-        row.classList.remove("selected");
+      selectedItems.forEach(key => {
+        const [cat, idx] = key.split('-');
+        const item = menuItems[cat][parseInt(idx)];
+        if (!cart.some(ci => ci.name === item.name)) {
+          cart.push({ ...item, qty: 1 });
+        }
       });
+      selectedItems = [];
+      document.querySelectorAll('.selectable-item').forEach(row => row.classList.remove("selected"));
       renderCart();
     };
+
     function removeFromCart(idx) {
       cart.splice(idx, 1);
       renderCart();
     }
+
     function renderCart() {
       const cartDiv = document.getElementById("cartItems");
       cartDiv.innerHTML = "";
@@ -174,24 +145,20 @@
       if (cart.length === 0) cartDiv.innerHTML = "<em>No items yet.</em>";
       else cart.forEach((item, idx) => {
         total += item.qty * item.price;
-        const row = document.createElement("div");
-        row.className = "cart-row";
-        row.innerHTML = `
-          <span>${item.name} (₱${item.price})</span>
-          <button type="button" class="delete-btn" onclick="removeFromCart(${idx})">🗑️</button>
-        `;
-        cartDiv.appendChild(row);
+        cartDiv.innerHTML += `
+          <div class="cart-row">
+            <button type="button" class="delete-btn" onclick="removeFromCart(${idx})">🗑️</button>
+            <span>${item.name}</span>
+            <span>₱${item.price}</span>
+          </div>`;
       });
       document.getElementById("dropdownTotal").textContent = total;
     }
 
-    // 2. SUBMIT LOGIC WITH CONFIRMATION PAGE
     document.getElementById("fullOrderForm").addEventListener("submit", function(e) {
       e.preventDefault();
-      if(cart.length===0){
-        alert("Please select at least one menu item.");
-        return;
-      }
+      if(cart.length === 0) return alert("Please add at least one item.");
+
       const data = {
         name: document.getElementById("name").value,
         mobile: document.getElementById("mobile").value,
@@ -199,52 +166,45 @@
         persons: document.getElementById("persons").value || "",
         datetime: document.getElementById("datetime").value,
         requests: document.getElementById("requests").value,
-        cart: JSON.stringify(cart),
+        cart: cart,
         total: document.getElementById("dropdownTotal").textContent
       };
 
-      // LOADING... (Optional: add spinner/message)
-      document.getElementById("orderSummary").classList.remove("hidden");
-      document.getElementById("summaryText").innerHTML = `<div style="color:#888">Sending your order... Please wait.</div>`;
+      const message = `🧾 *New Order!*\n👤 Name: ${data.name}\n📞 Mobile: ${data.mobile}\n🍽️ Type: ${data.orderType}\n👥 Pax: ${data.persons}\n🕰️ When: ${data.datetime}\n🧺 Items: ${cart.map(i=>`${i.name} x${i.qty}`).join(', ')}\n💵 Total: ₱${data.total}\n📌 Requests: ${data.requests}`;
 
-      fetch("https://script.google.com/macros/s/AKfycbyKlYNy78JDPvS_Dl65sHT24T5FE33XBWB-uo3rrafz3aCP5RuihGnJgeoq-NRc46iwsA/exec", {
+      fetch("https://api.telegram.org/bot7538084446:AAEEBLr2U1YRhKhSyrN-HWf4mnPfjhtXgUqY/sendMessage", {
         method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify(data)
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          chat_id: "-1002531095369",
+          text: message,
+          parse_mode: "Markdown"
+        })
       })
-      .then(response => response.text())
-      .then(text => {
-        if (text.trim() === "OK") {
-          document.getElementById("fullOrderForm").style.display = "none";
-          let summary = "<h2>Thank you for your order!</h2>";
-          summary += "<strong>Order Details:</strong><br><ul>";
-          cart.forEach(item => {
-            summary += `<li>${item.name} (₱${item.price}) x ${item.qty}</li>`;
+      .then(r => r.json())
+      .then(res => {
+        if (res.ok) {
+          // Only then submit to Sheets
+          fetch("https://script.google.com/macros/s/AKfycbyKlYNy78JDPvS_Dl65sHT24T5FE33XBWB-uo3rrafz3aCP5RuihGnJgeoq-NRc46iwsA/exec", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(data)
           });
-          summary += "</ul>";
-          summary += `<strong>Total Amount:</strong> ₱${data.total}<br><br>`;
-          summary += `<div style="font-size:1.1em;color:#b22222;margin-top:12px;">
-            Your order has been submitted and our staff will process it after payment has been made.<br>
-            Please feel free to explore our site while waiting.
-          </div>`;
-          document.getElementById("summaryText").innerHTML = summary;
+
+          document.getElementById("orderSummary").classList.remove("hidden");
+          document.getElementById("summaryText").innerHTML = `<h2>Thank you for your order!</h2><p>Your order was successfully submitted and is being processed.</p>`;
           cart = [];
           renderCart();
-          document.querySelectorAll('.selectable-item').forEach(row => {
-            row.classList.remove("selected");
-          });
+          document.getElementById("fullOrderForm").reset();
         } else {
-          document.getElementById("summaryText").innerHTML = `<h2 style="color:#b22222">Your order has not been sent.</h2>
-          <div>Sorry, there was a problem sending your order. Please try again, or contact our staff for assistance.</div>`;
+          document.getElementById("summaryText").innerHTML = `<h2 style='color:red;'>Failed to send order.</h2>`;
         }
       })
-      .catch(err => {
-        document.getElementById("summaryText").innerHTML = `<h2 style="color:#b22222">Your order has not been sent.</h2>
-        <div>Sorry, there was a problem sending your order. Please try again, or contact our staff for assistance.</div>`;
+      .catch(() => {
+        document.getElementById("summaryText").innerHTML = `<h2 style='color:red;'>Network error. Try again.</h2>`;
       });
     });
 
-    // Init cart UI
     renderCart();
     window.removeFromCart = removeFromCart;
   </script>
