--- a/order/index.html
+++ b/order/index.html
@@ -173,7 +173,7 @@ function submitOrder() {
     total: document.getElementById("total").innerText
   };
 
-  fetch("https://api.telegram.org/bot7538084446:AAEEBLr2U1YRhKhSyrN-HWf4mnPfjhtXgUqY/sendMessage", {
+  fetch("https://script.google.com/macros/s/AKfycbwsMkI1XJkYdusQWVE-8KiEzd0g50aC5cPv6qC6WHiC-4eFQJ6MuCQwf7H8beNbKLWX/exec", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
